arrow-inject-compiler-plugin/src/testData/diagnostics/value-arguments/prohibited_public_proof_over_polymorphic_type_parameter.kt
package foo.bar

import foo.bar.annotations.Given

<!OWNERSHIP_VIOLATED_PROOF!>@Given
fun <A> list(): List<Iterable<A>> = emptyList()<!>
